ceph: make the lost+found dir accessible by kernel client

Inode number 0x4 is reserved for the lost+found dir, and the app
or test app need to access it.

URL: https://tracker.ceph.com/issues/50216
Signed-off-by: Xiubo Li <xiubli@redhat.com>